objects/CusRep_Filter_Value__c.object
<CustomObject>
    <fields>
        <fullName>Apply_Running_User_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether result should contain only running user&apos;s data.</inlineHelpText>
        <label>Apply Running User Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CusRep_Filter__c</fullName>
        <label>CusRep_Filter</label>
        <referenceTo>CusRep_Filter__c</referenceTo>
        <relationshipLabel>CusRep_Filter Values</relationshipLabel>
        <relationshipName>CusRep_Filter_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <inlineHelpText>Text that will be displayed as filter value</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Visibility__c</fullName>
        <label>Permission Set Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <inlineHelpText>Filtered value</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CusRep_Filter Value</label>
    <nameField>
        <displayFormat>CRFV-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CusRep_Filter Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>